FlightPath 6.x Changelog
========================

2021-07-14
  Fixed bug where form_error's was messing up markup_no_wrappers elements.

  Added extra validation on degree edit form, so that it stops you from adding a duplicate group with mismatched type or min hours.  Also made it
  so you can delete such a group.
  

2021-07-12
  Made it more clear that the currently used SMS service in Engagements is "SignalWire".  Also made sure that emails processed by Engagements were deleted after
  they were parsed, so they do not fill up the email server's Trash folder.
  

2021-07-11
  Fixed bug in engagements module where it was looking for a table which does not exist.
  
  Made it so when an appointment (with Zoom) is cancelled, it also deletes the Zoom meeting from zoom's servers.


2021-07-10
  Removed page titles from the Student search pages/forms.
  
  Added new CSS for printing.
  
  Added ability to add classes to collapsible fieldsets.
  

2021-07-09
  Implemented handling of numeric grades in FlightPath.  Basically, they must be converted to letter grades at the time
  they are assigned.  There is also now a new field in Course:  db_grade.  This is the actual grade as it is stored in the
  the database.
  
  
 
2021-07-08
  Cleaning up code, adding more content to render array system.  Cleaning up malformed HTML.
  
  Continuing work on themeing and rendering system.
   
 
2021-07-07
  Converted advise_display_view to use render array system. 
  
  Changed when drawing course rows, no longer hard-coding widths, styles, align, etc.
  elements.  Instead, we are relying entirely only CSS classes for styling.
 
 
2021-07-06 
  Converted AdvisingScreen::displaySemester to using render array system.

  For markup elements in the form_api, if type is not explicitly set to "markup", and is left blank,
  then the default will be "markup_no_wrappers", which means no wrapping divs will be used. 
  
  Converted AdvisingScreen::draw_course_row to use render array system.