@@ -76,7 +76,7 @@
   
   
   
-}  /* max-width 1450px */
+}  
 
 
 
